package com.lkjuhkmnop.textquest.story;

public class TQQuest {
    //    json attributes (json file received from Twine using Twison)
    public TwPassage[] passages;
    public String name;
    public int startnode;
    public String creator, creator_version, ifid;
}
