package com.lkjuhkmnop.textquest.story;

public class TwLink {
    public String name;
    public String link;
    public int pid;

    @Override
    public String toString() {
        return "story.TwLink{" +
                "\n\t\tname='" + name + '\'' +
                ",\n\t\t link='" + link + '\'' +
                ",\n\t\t pid=" + pid +
                '}';
    }
}
