package com.lkjuhkmnop.textquest.story;

public class TwPosition {
    public float x, y;

    @Override
    public String toString() {
        return "story.TwPosition{" +
                "\n\t\tx=" + x +
                ",\n\t\t y=" + y +
                '}';
    }
}
